# zincLang

./: .gitignore  CMakeLists.txt  README.md
docs/: array.txt  index.md  mvp v1  t1
examples/: array.zinc  conditionals.zinc  functions.zinc  hello.zinc  loops.zinc  operators.zinc  test.zinc  variables.zinc
src/: main.cpp
src/ast/: ast.cpp  ast.h
src/codegen/: codegen.cpp  codegen.h
src/ir/: ir.cpp  ir.h  ir_builder.cpp  ir_builder.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
src/runtime/: builtins.cpp  builtins.h
src/sema/: environment.cpp  environment.h  typechecker.cpp  typechecker.h
src/utils/: logger.h
tests/: CMakeLists.txt  codegen_tests.cpp  lexer_tests.cpp  parser_tests.cpp
